--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,8 @@
         </ul>
     </main>
     <footer id="dec-container">
-        <div class="decoration"><img src="..\img\google.png"></div>
+        <img src="..\img\google.png">
+        <!-- <div class="decoration"></div> -->
     </footer>
 
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
