--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
             <li class="last">
                 <div class="addSite">
                     <div class="icon-container">
-                        <svg class="icon" aria-hidden="true">
+                        <svg class="icon">
                             <use xlink:href="#icon-add"></use>
                         </svg>
                     </div>
@@ -64,7 +64,7 @@
     </footer>
 
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
-    <script src="//at.alicdn.com/t/font_1676302_lg4fbtp79j.js"></script>
+    <script src="//at.alicdn.com/t/font_1676302_fzy5q4rdkwp.js"></script>
     <script src="main.js"></script>
 </body>
 
