--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         </form>
 
     </header>
-    <main>
+    <main class="ulContainer">
         <ul class="siteList">
             <!-- <li>
                 <a href="https://www.figma.com">
