--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>我的前端导航</title>
 </head>
 
 <body>
@@ -57,6 +57,7 @@
                 </div>
             </li>
         </ul>
+
     </main>
     <footer id="dec-container">
         <img src="..\img\google.png">
