修复了可以提交空链接的bug

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
 
     </main>
     <footer id="dec-container">
-        <img src="..\img\google.png">
+        <img src="../img/google.png">
         <!-- <div class="decoration"></div> -->
     </footer>
 
